--- a/authors.html
+++ b/authors.html
@@ -10,12 +10,15 @@
         <header id="banner" class="body">
                 <h1><a href="/">Hang Xu </a></h1>
                 <nav><ul>
+                    <li><a href="/pages/about.html">about</a></li>
+                    <li><a href="/category/review.html">Review</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on Hang Xu</h1>
     <ul>
+        <li><a href="/author/hang-xu.html">Hang Xu</a> (1)</li>
     </ul>
 </section>
 
