--- a/tags.html
+++ b/tags.html
@@ -10,6 +10,8 @@
         <header id="banner" class="body">
                 <h1><a href="/">Hang Xu </a></h1>
                 <nav><ul>
+                    <li><a href="/pages/about.html">about</a></li>
+                    <li><a href="/category/review.html">Review</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
