--- a/categories.html
+++ b/categories.html
@@ -10,10 +10,13 @@
         <header id="banner" class="body">
                 <h1><a href="/">Hang Xu </a></h1>
                 <nav><ul>
+                    <li><a href="/pages/about.html">about</a></li>
+                    <li><a href="/category/review.html">Review</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
     <h1>Categories on Hang Xu</h1>
     <ul>
+        <li><a href="/category/review.html">Review</a> (1)</li>
     </ul>
         <section id="extras" class="body">
                 <div class="blogroll">
