--- a/pages/about.html
+++ b/pages/about.html
@@ -14,9 +14,9 @@
                 <h1><a href="/">Hang Xu</a></h1>
         </header><!-- /#banner -->
         <nav id="menu"><ul>
-          <li><a href="/pages/About.html">About</a></li>
+          <li><a href="/pages/about.html">About</a></li>
           <li><a href="/index.html">Blog</a></li>
-          <li><a href="/">CV</a></li>
+          <li><a href="/CV.pdf">CV</a></li>
           <li><a href="/tags.html">Tags</a></li>
         </ul></nav><!-- /#menu -->
 <section id="content">
@@ -29,7 +29,7 @@
         <footer id="contentinfo" class="body">
           <address id="about" class="vcard body">
           © 2020 <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">Hang Xu.</span> Licensed under a <a rel="License" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
-          Proudly powered by <a href="https://getpelican.com/">Pelican</a>. Blog <a href="/pages/README.html">README</a>.
+          Proudly powered by <a href="https://getpelican.com/">Pelican</a>. Blog <a href="/pages/readme.html">README</a>.
           </address><!-- /#about -->
         </footer><!-- /#contentinfo -->
 </body>
