--- a/categories.html
+++ b/categories.html
@@ -20,7 +20,7 @@
         </ul></nav><!-- /#menu -->
 <section id="content">
     <h2 id="heading-title">Categories on Hang Xu</h2>
-    <ul>
+    <ul id="tc-list">
         <li><a href="/category/daily.html">Daily</a> (1)</li>
     </ul>
 </section>
