--- a/tags.html
+++ b/tags.html
@@ -20,7 +20,7 @@
         </ul></nav><!-- /#menu -->
 <section id="content">
     <h2 id="heading-title">Tags</h2>
-    <ul>
+    <ul id="tc-list">
         <li><a href="/tag/others.html">Others</a> (1)</li>
     </ul>
 </section>
