translate the first article

--- a/archives.html
+++ b/archives.html
@@ -22,7 +22,7 @@
 
 <dl>
     <dt>Fri 23 October 2020</dt>
-    <dd><a href="/my-first-article.html">My First Article</a></dd>
+    <dd><a href="/My-First-Article.html">My First Article</a></dd>
 </dl>
         <footer id="contentinfo" class="body">
           <address id="about" class="vcard body">
