--- a/zh/categories.html
+++ b/zh/categories.html
@@ -21,7 +21,7 @@
 <section id="content">
     <h2 id="heading-title">Categories on 徐航</h2>
     <ul id="tc-list">
-        <li><a href="/zh/category/daily.html">Daily</a> (1)</li>
+        <li><a href="/zh/category/ri-chang.html">日常</a> (1)</li>
     </ul>
 </section>
         <footer id="contentinfo" class="body">
