--- a/zh/tags.html
+++ b/zh/tags.html
@@ -21,7 +21,7 @@
 <section id="content">
     <h2 id="heading-title">Tags</h2>
     <ul id="tc-list">
-        <li><a href="/zh/tag/others.html">Others</a> (1)</li>
+        <li><a href="/zh/tag/qi-ta.html">其他</a> (1)</li>
     </ul>
 </section>
         <footer id="contentinfo" class="body">
