translate the first article

--- a/zh/archives.html
+++ b/zh/archives.html
@@ -22,7 +22,7 @@
 
 <dl>
     <dt>Fri 23 October 2020</dt>
-    <dd><a href="/zh/My-First-Article.html">全新的开始</a></dd>
+    <dd><a href="/zh/my-first-article.html">全新的开始</a></dd>
 </dl>
         <footer id="contentinfo" class="body">
           <address id="about" class="vcard body">
